fix: category-card titles are now visible

--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -4,6 +4,7 @@
     --primary: #469a57;
     --primary-100: #BAE2B0;
     --secondary: #7EB532;
+    --back-green: #c4dbbd;
     --white: #eaeaea;
 }
 
