--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -23,23 +23,37 @@
 
 /* category grid */
 .category-grid {
+    padding: 1em;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     align-items: center;
-    gap: 3em;
-    margin: 3rem
+    gap: 2em;
+    margin: 4rem;
 }
 
 .card-img{
     opacity: 90%;
 }
 
-.card>.card-head {
-    color: var(--primary);
+.category-card >.card-head {background: var(--primary);
+    color: var(--white);
     text-transform: uppercase;
     padding: 1em;
+    border-radius: var(--radius-s) var(--radius-s) 0 0;
 }
 
-.card-img > img{
-    border-radius: var(--radius-s) var(--radius-s) 0 0;
+.category-card .card-img > img{
+    border-radius:0 0 var(--radius-s) var(--radius-s) ;
+}
+
+.category-card{
+    height: auto;
+}
+
+.card{
+    transition: transform .2s;
+}
+
+.card:hover{
+    transform: scale(1.05);
 }
