--- a/src/styles/product-list.css
+++ b/src/styles/product-list.css
@@ -9,6 +9,8 @@
     grid-template-columns: 1fr 1fr ;
     padding: 3em;
     gap: 2em;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /* product card */
@@ -59,7 +61,6 @@
 .badge > i{
     color: var(--white);
 }
-
 .price-input{
     padding: 0;
 }
